<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="572dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left|center"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/lbl_title"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_padding"
            android:gravity="center">

            <TextView
                android:id="@+id/fragment_register_lbl_address"
                style="@style/AppTheme.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:gravity="center|left"
                android:text="@string/lbl_link"
                android:textColor="@color/color_black"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fragment_register_edt_address"
                style="@style/AppTheme.Widget.EditText"
                android:layout_width="@dimen/default_edit_text_width"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/default_padding_small"
                android:layout_toLeftOf="@+id/fragment_register_lbl_address"
                android:gravity="center|left"
                android:hint="@string/lbl_hint_link"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_grey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/fragment_register_lbl_name"
                style="@style/AppTheme.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="left"
                android:gravity="center|left"
                android:text="@string/lbl_name"
                android:textColor="@color/color_black"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fragment_register_edt_name"
                style="@style/AppTheme.Widget.EditText"
                android:layout_width="@dimen/default_edit_text_width"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/default_padding_small"
                android:layout_toLeftOf="@+id/fragment_register_lbl_name"
                android:gravity="center|left"
                android:hint="@string/lbl_hint_name"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_grey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                style="@style/AppTheme.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/default_padding"
                android:gravity="center|left"
                android:text="@string/lbl_pass"
                android:textColor="@color/color_black"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fragment_register_edt_password"
                style="@style/AppTheme.Widget.EditText"
                android:layout_width="@dimen/default_edit_text_width"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/default_padding_small"
                android:gravity="center|left"
                android:hint="@string/lbl_hint_pass"
                android:password="true"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_grey" />
        </RelativeLayout>

        <Button
            android:id="@+id/fragment_register_btn_submit"
            style="@style/AppTheme.Widget.Button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="@dimen/default_button_height"
            android:layout_gravity="right|center"
            android:layout_marginTop="@dimen/default_padding_x"
            android:background="@drawable/btn_default_style"
            android:gravity="center"
            android:text="@string/btn_register" />
    </LinearLayout>

</RelativeLayout>